2004-07-16  Wim Taymans  <wim@fluendo.com>

	* testsuite/schedulers/142183-2.c: (handoff_identity), (main):
	* testsuite/schedulers/142183.c: (handoff_identity), (main):
	* testsuite/schedulers/Makefile.am:
	Added testsuite for bug 142183 in its two incarnations. Refcount
	is not increased for scheduled elements and threadsafe properties
	mutexes are not properly unlocked.

2004-07-16  Wim Taymans  <wim@fluendo.com>

	* gst/schedulers/gstoptimalscheduler.c: (gst_opt_scheduler_init),
	(create_chain), (destroy_chain), (create_group), (destroy_group),
	(add_to_group), (merge_groups), (group_elements), (group_inc_link),
	(group_dec_link), (gst_opt_scheduler_pad_link),
	(group_inc_links_for_element), (group_migrate_connected):
	Call group_inc_link with the proper src->sink ordering -- 
	break this, and we break sort_chain. patch from wingo for bug
	147713.
	Partially revert patch 1.89. When adding a loop based element to 
	the scheduler, the links to other groups are automatically followed
	and incremented. This should not happen because the bin will call
	pad_link explicitly for those connection, resulting in them counted 
	twice. Results in assertion failure on pipeline cleanup.

2004-07-16  Wim Taymans  <wim@fluendo.com>

	* testsuite/schedulers/143777-2.c: (main):
	* testsuite/schedulers/147713.c: (handoff_src), (handoff_sink),
	(main):
	* testsuite/schedulers/Makefile.am:
	Added cleanup code to testcase 143777-2.
	Added testcase to show bug 147713, does not really show the
	deadlock as I can't figure out how to trigger it, but it does
	demonstrate bad ordering in the scheduler.

2004-07-16  Thomas Vander Stichele  <thomas at apestaart dot org>

	* gst/gstvalue.c: (gst_value_deserialize_fraction):
	  change strndup to g_strndup.  Fixes #147707

2004-07-16  Thomas Vander Stichele  <thomas at apestaart dot org>

	* po/af.po:
	* po/az.po:
	* po/cs.po:
	* po/en_GB.po:
	* po/fr.po:
	* po/nl.po:
	* po/sr.po:
	* po/sv.po:
	* po/tr.po:
	* po/uk.po:
	  updated translations
